images: label workaround

--- a/icons/texhere/label.tex
+++ b/icons/texhere/label.tex
@@ -1,8 +1,9 @@
-\documentclass{standalone}
+\documentclass[border=10pt]{standalone}
+\usepackage{cmbright}
 \usepackage{shadowtext}
 
 \begin{document}
 \Huge\shadowtext{
-  \TeX{} M$\alpha\tau$\textit{h} Here
+  Math Here
 }
 \end{document}
